# Analysis

./: .gitignore  CMakeLists.txt  README.md  chronoTimer.h  interpolationLagrange.cpp  interpolationlagrange.h  lexicalCast.h  main.cpp  mpTypes.h  myTimer.h
results_processing/: plotter.py
